--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello, This is a new branch.</h1>
+    <h1>This is an Update</h1>
     <script src="app.js"></script>
 </body> 
 </html>
